--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
-    "node": "^17.4.0",
+    "node": "17.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
