--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
+    "mongoose": "^6.2.1",
     "node": "17.4.0",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
@@ -23,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node app",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,7 +50,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "app.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ahmedSam22/react.git"
